--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "@prisma/client": "^4.2.1",
+    "apollo-server-micro": "^3.10.1",
+    "graphql": "^16.6.0",
+    "micro": "^9.4.1",
+    "micro-cors": "^0.1.1",
     "next": "latest",
+    "nexus": "^1.3.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
@@ -16,7 +23,9 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "prisma": "^4.2.1",
     "tailwindcss": "^3.1.2",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.2"
   }
 }
