feat: GQL schemas & Auth pages

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=postgresql://t.kang@localhost:5432/t.kang
+DATABASE_URL=postgresql://t.kang@localhost:5432/testDB
+# NEXTAUTH_URL=http://localhost:3000/api/auth/
+NEXTAUTH_SECRET=T5rLitTZ4ZwJh2zUl7FmTVj9McoAHKLzOhyuwMY4zAA=
