--- a/package.json
+++ b/package.json
@@ -3,21 +3,38 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "codegen": "graphql-codegen --config codegen.yml"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
     "apollo-server-micro": "^3.10.1",
+    "bcrypt": "^5.0.1",
+    "framer-motion": "^7.2.1",
     "graphql": "^16.6.0",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-scalars": "^1.18.0",
     "micro": "^9.4.1",
     "micro-cors": "^0.1.1",
     "next": "latest",
+    "next-auth": "^4.10.3",
     "nexus": "^1.3.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-toastify": "^9.0.8",
+    "sass": "^1.54.8"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.11.8",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-operations": "2.5.3",
+    "@graphql-codegen/typescript-react-apollo": "3.3.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
