--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "next": "latest",
     "next-auth": "^4.10.3",
     "nexus": "^1.3.0",
+    "nookies": "^2.5.2",
     "react": "18.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.1.0",
     "react-toastify": "^9.0.8",
     "sass": "^1.54.8"
@@ -37,6 +39,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
